@@ -34,6 +34,7 @@
 		- now uses a default seed if no seed is specified, rather
 		  than a (half-baked) random seed
 
+		include/biting-pear/omg.h ,
 		lolwutconf/configure.inc :
 		- minor fixes
 
